@@ -6,6 +6,9 @@ versions of Red5.
 
 Red5 0.6.4  (unreleased)
 ------------------------
+New Features:
+- added stream listeners that can get notified about received packets
+
 Bugfixes:
 - pause near end of buffered streams works as expected (Jira APPSERVER-199)
 
